Fixed alignment issue when sending request in try-it.

--- a/modules/web/src/plugins/try-it/views/http-client.scss
+++ b/modules/web/src/plugins/try-it/views/http-client.scss
@@ -313,7 +313,7 @@ hr{
     width:auto;
     margin-left: 5px;
     margin-bottom: 15px;
-    max-width: 870px;
+    max-width: 900px;
     .main-wrapper-top {
         height: 45px;
         .http-client-request-method-wrapper {
